--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^8.57.0",
     "html-validate": "^8.17.1",
     "jest": "^29.7.0",
+    "jest-webextension-mock": "^3.9.0",
     "json-minify": "^1.0.0",
     "parcel": "^2.12.0",
     "ts-jest": "^29.2.4",
