* Refactor file names; * Prepare moderation call and output management.

--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "build:locales": "npm run build:locales-en && npm run build:locales-it",
     "build:locales-en": "node_modules/.bin/json-minify src/locales/en-messages.json > ai-mail-support/_locales/en/messages.json",
     "build:locales-it": "node_modules/.bin/json-minify src/locales/it-messages.json > ai-mail-support/_locales/it/messages.json",
-    "build:background": "parcel build src/html/background-menu.html --dist-dir ai-mail-support --no-source-maps --no-content-hash --no-cache",
+    "build:background": "parcel build src/html/backgroundMenu.html --dist-dir ai-mail-support --no-source-maps --no-content-hash --no-cache",
     "build:messageDisplayScripts": "npm run build:messageDisplayScripts:ts && npm run build:messageDisplayScripts:sass",
-    "build:messageDisplayScripts:ts": "parcel build src/ts/MessageDisplayScripts.ts --dist-dir ai-mail-support/messageDisplay --no-source-maps --no-content-hash --no-cache",
+    "build:messageDisplayScripts:ts": "parcel build src/ts/messageDisplayScripts.ts --dist-dir ai-mail-support/messageDisplay --no-source-maps --no-content-hash --no-cache",
     "build:messageDisplayScripts:sass": "parcel build src/sass/messageDisplayScripts.scss --dist-dir ai-mail-support/messageDisplay --no-source-maps --no-content-hash --no-cache",
     "build:options": "parcel build src/html/options.html --dist-dir ai-mail-support/options --public-url /options/ --no-source-maps --no-content-hash --no-cache",
     "build": "npm run build:manifest && npm run build:locales && npm run build:addon",
