Continuation of Work Version 0.88
	•	Library updates;
	•	Remove SVG close icon in favor of CSS solution;
	•	Progress with Ollama.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -78,7 +78,6 @@
         "browser_style": false
     },
     "web_accessible_resources": [
-        "images/bot-icon-color-64.webp",
-        "images/close-icon.svg"
+        "images/bot-icon-color-64.webp"
     ]
 }
