Ollama email Inference on AI support introduces a new option "Review Code" is added that can provide review comments for the code present in mail chain This Review Code has three mode(s) of review style   * Detailed   - Comprehensive line-by-line review including rationale, edge cases, and improvement suggestions.   * High Level - Abstracts the summary focusing on design, architecture decisions, and general correctness.   * Concise    - To-the-point brief review that summarizes key issues and without verbosity.
Signed-off-by: Priya A <priyama2@in.ibm.com>

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -16,6 +16,7 @@
         "accountsRead",
         "compose",
         "menus",
+	"activeTab",
         "messagesRead",
         "messagesModify",
         "storage"
